--- a/02_style/style.css
+++ b/02_style/style.css
@@ -145,7 +145,7 @@ button:hover {
 
 .screen .handy {
   position: absolute;
-  width: 15vmax;
+  width: 300px;
   height: 40vmin;
   background: url(../01_pics/phone_stars.jpeg);
   background-size: cover;
@@ -288,7 +288,7 @@ button:hover {
   position: relative;
   left: 40%;
   bottom: 0;
-  width: 20vmax;
+  width: 300px;
   height: 100%;
 }
 
@@ -301,10 +301,10 @@ button:hover {
 }
 
 .screen .scheinwerfer .spot-axa {
-  width: 60%;
+  width: 210px;
   height: auto;
   position: absolute;
-  left: 5%;
+  left: 0;
   border-radius: 50%;
   z-index: 50;
 }
@@ -315,7 +315,7 @@ button:hover {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 30vmax;
+  width: 600px;
   z-index: 30;
 }
 
@@ -332,7 +332,7 @@ button:hover {
   text-transform: uppercase;
   font-weight: bold;
   z-index: 60;
-  font-size: 4vmax;
+  font-size: 4rem;
   color: white;
   display: none;
   text-align: center;
@@ -341,11 +341,11 @@ button:hover {
 .screen .pointer {
   z-index: 60;
   position: absolute;
-  left: 22%;
+  left: 15%;
   bottom: 6%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: 4vmax;
+  font-size: 4rem;
   color: white;
   -webkit-animation: pointlink infinite ease-in-out 1s;
           animation: pointlink infinite ease-in-out 1s;
@@ -354,19 +354,19 @@ button:hover {
 
 @-webkit-keyframes pointlink {
   50% {
-    left: 23%;
+    left: 20%;
   }
   100% {
-    left: 22%;
+    left: 15%;
   }
 }
 
 @keyframes pointlink {
   50% {
-    left: 23%;
+    left: 20%;
   }
   100% {
-    left: 22%;
+    left: 15%;
   }
 }
 /*# sourceMappingURL=style.css.map */
